Retos de estructura de datos

--- a/Pyhon Hk parte 1.ipynb
+++ b/Pyhon Hk parte 1.ipynb
@@ -150,10 +150,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingrese numero: 1\n",
+      "Ingrese numero: 1\n",
+      "Ingrese numero: 1\n",
+      "Ingrese numero: 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [1, 0, 0], [1, 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compresion de listas\n",
+    "\n",
+    "x,y,z,n =(int(input(\"Ingrese numero:\")) for _ in range(4))\n",
+    "print([[a,b,c] for a in range(x+1) for b in range(y+1) for c in range(z+1) if a+b+c!=n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15, 24, 50, 27, 42, 18, 10, 27, 32, 45]\n",
+      "[10, 15, 18, 24, 27, 32, 42, 45, 50]\n",
+      "50\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Muestra la segunda puntuacion\n",
+    "from random import randint\n",
+    "\n",
+    "puntaje = [randint(1,50) for _ in range(10)]\n",
+    "\n",
+    "print(puntaje)\n",
+    "print(sorted(set(puntaje))) #Lo convierte en una lista\n",
+    "print(sorted(set(puntaje))[-1]) #Primer lugar\n",
+    "print(sorted(set(puntaje))[-2]) #Segundo lugar\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Muestra la segunda puntuacion\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
