--- a/Pyhon Hk parte 1.ipynb
+++ b/Pyhon Hk parte 1.ipynb
@@ -9,24 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
      "output_type": "stream",
-     "text": [
-      "Ingrese un elemento:  5\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "inicial\n",
-      "0 1 4 9 16 \n",
-      "Avanzado\n",
-      "0 1 4 9 16\n"
+      "Avanzado\n0 1 4 9 16 25 36 49 64 81\n"
      ]
     }
    ],
@@ -40,19 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
      "output_type": "stream",
-     "text": [
-      "Ingrese un año se le dira si es biciesto:  1990\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
       "False\n"
      ]
@@ -71,21 +54,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
      "output_type": "stream",
-     "text": [
-      "Numero:  5\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "12345\n"
+      "12345678910\n"
      ]
     }
    ],
@@ -96,21 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
      "output_type": "stream",
-     "text": [
-      " 5\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "12345\n"
+      "12345678910\n"
      ]
     }
    ],
@@ -121,19 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
      "output_type": "stream",
-     "text": [
-      " 5\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
       "Weird\n"
      ]
@@ -150,24 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
      "output_type": "stream",
-     "text": [
-      "Ingrese numero: 1\n",
-      "Ingrese numero: 1\n",
-      "Ingrese numero: 1\n",
-      "Ingrese numero: 2\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [1, 0, 0], [1, 1, 1]]\n"
+      "[[0, 0, 0], [0, 1, 1], [1, 0, 1], [1, 1, 0], [1, 1, 1]]\n"
      ]
     }
    ],
@@ -180,17 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[15, 24, 50, 27, 42, 18, 10, 27, 32, 45]\n",
-      "[10, 15, 18, 24, 27, 32, 42, 45, 50]\n",
-      "50\n",
-      "45\n"
+      "[18, 32, 12, 5, 15, 17, 41, 43, 15, 23]\n[5, 12, 15, 17, 18, 23, 32, 41, 43]\n43\n41\n"
      ]
     }
    ],
@@ -209,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
