Se agregan algoritmos y se prueba su complejidad

--- a/Algoritmia P1.ipynb
+++ b/Algoritmia P1.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Algoritmia"
+    "# Algoritmos basicos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Algoritmos de busqueda"
+    "## Busqueda lineal"
    ]
   },
   {
@@ -20,10 +20,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[14, 29, 4, 97, 53, 54, 149, 147, 84, 12, 10, 42, 90, 40, 28, 148, 121, 70, 133, 27, 13, 8, 112, 121, 107, 42, 35, 63, 99, 39]\nEl elemento 25 no esta en la lista \n"
+      "[14, 29, 4, 97, 53, 54, 149, 147, 84, 12, 10, 42, 90, 40, 28, 148, 121, 70, 133, 27, 13, 8, 112, 121, 107, 42, 35, 63, 99, 39]\n",
+      "El elemento 25 no esta en la lista \n"
      ]
     }
    ],
@@ -52,15 +53,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Busqueda binaria modo iterativo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 9, 9, 13, 13, 15, 20, 24, 25]\n",
+      "El elemento 8 no esta en la lista \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Busqueda binarias caso iterativo\n",
+    "\n",
+    "from random import randint\n",
+    "\n",
+    "def binary_search(lista, target):\n",
+    "    low = 0\n",
+    "    high = len(lista)-1\n",
+    "    \n",
+    "    while low <= high:\n",
+    "        mid = (low + high)//2\n",
+    "        guess = lista[mid]\n",
+    "        if guess == target: #Se encontro el item\n",
+    "            return True\n",
+    "        if guess > target:\n",
+    "            high = mid -1\n",
+    "        else:\n",
+    "            low = mid +1\n",
+    "    return False\n",
+    "\n",
+    "lista = sorted([randint(1,25) for _ in range(10)])\n",
+    "\n",
+    "print(lista)\n",
+    "target = 8\n",
+    "encontrado = binary_search(lista,target)\n",
+    "print(f\"El elemento {target} {'esta' if encontrado else 'no esta'} en la lista \")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Busqueda binaria usando recursion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[1, 3, 17, 20, 23, 33, 34, 35, 38, 40, 46, 53, 60, 61, 61, 73, 78, 79, 84, 99]\nEl elemento 15 no esta en la lista \n"
+      "[1, 3, 17, 20, 23, 33, 34, 35, 38, 40, 46, 53, 60, 61, 61, 73, 78, 79, 84, 99]\n",
+      "El elemento 15 no esta en la lista \n"
      ]
     }
    ],
@@ -96,13 +154,105 @@
    ]
   },
   {
-   "source": [
-    "## Algoritmos de ordenamiento"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# Algoritmos de ordenamiento"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ordenamiento por seleccion (Selectionsort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Tamaño de la lista a ordenar:  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista desordenada: \n",
+      "[172, 38, 52, 18, 150, 8, 54, 134, 98, 15]\n",
+      "\n",
+      "Lista ordenada\n",
+      "[8, 15, 18, 38, 52, 54, 98, 134, 150, 172]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Complejidad n^2\n",
+    "from random import randint\n",
+    "\n",
+    "\n",
+    "def findSmallest(arreglo):\n",
+    "    smallest = arreglo[0] #Almacena el valor mas pequeño\n",
+    "    smallest_index = 0 # Almacena el indice del valor mas pequeño\n",
+    "    for i in range(1, len(arreglo)):\n",
+    "        if arreglo[i] < smallest:\n",
+    "            smallest = arreglo[i]\n",
+    "            smallest_index = i\n",
+    "    return smallest_index\n",
+    "    \n",
+    "def selectionSort(arreglo):\n",
+    "    new_arr = [arreglo.pop(findSmallest(arreglo)) for _ in range(len(arreglo))]\n",
+    "    return new_arr\n",
+    "\"\"\"\n",
+    "    for _ in range(len(arreglo)):\n",
+    "        smallest = findSmallest(arreglo)\n",
+    "        new_arr.append(arreglo.pop(smallest))\n",
+    "    return new_arr\"\"\"\n",
+    "    \n",
+    "\n",
+    "\n",
+    "size = int(input(\"Tamaño de la lista a ordenar: \"))\n",
+    "lista = [randint(1,200) for _ in range(size)]\n",
+    "\n",
+    "print(\"Lista desordenada: \")\n",
+    "print(lista)\n",
+    "\n",
+    "print(\"\\nLista ordenada\")\n",
+    "lista = selectionSort(lista)\n",
+    "print(lista)\n",
+    "            \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ordenamiento por insercion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista desordenada: \n",
+      "[6, 79, 186, 194, 175, 8, 38, 37, 186, 101, 83, 190, 92, 21, 91]\n",
+      "\n",
+      "Lista ordenada\n",
+      "[6, 8, 21, 37, 38, 79, 83, 91, 92, 101, 175, 186, 186, 190, 194]\n"
+     ]
+    }
+   ],
    "source": [
     "# Ordenamiento por insercion\n",
     "# Complejidad n^2\n",
@@ -128,18 +278,13 @@
     "print(\"\\nLista ordenada\")\n",
     "lista = sort_insercion(lista)\n",
     "print(lista)"
-   ],
-   "cell_type": "code",
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "execution_count": 3,
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Lista desordenada: \n[6, 79, 186, 194, 175, 8, 38, 37, 186, 101, 83, 190, 92, 21, 91]\n\nLista ordenada\n[6, 8, 21, 37, 38, 79, 83, 91, 92, 101, 175, 186, 186, 190, 194]\n"
-     ]
-    }
+   "source": [
+    "## Ordenamiento de burbuja (bubblesort)"
    ]
   },
   {
@@ -148,10 +293,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Lista desordenada: \n[97, 67, 138, 108, 200, 180, 80, 61, 35, 22, 24, 163, 116, 35, 61]\n\nLista ordenada\n[22, 24, 35, 35, 61, 61, 67, 80, 97, 108, 116, 138, 163, 180, 200]\n"
+      "Lista desordenada: \n",
+      "[97, 67, 138, 108, 200, 180, 80, 61, 35, 22, 24, 163, 116, 35, 61]\n",
+      "\n",
+      "Lista ordenada\n",
+      "[22, 24, 35, 35, 61, 61, 67, 80, 97, 108, 116, 138, 163, 180, 200]\n"
      ]
     }
    ],
@@ -181,21 +330,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ordenamiento rapido (quicksort)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Lista desordenada: \n[169, 184, 141, 4, 94, 191, 11, 141, 197, 191, 151, 95, 72, 19, 200, 41, 145, 76, 128, 92]\n--------------------\n\nLista ordenada\n[4, 11, 19, 41, 72, 76, 92, 94, 95, 128, 141, 141, 145, 151, 169, 184, 191, 191, 197, 200]\n"
+      "[1, 137, 112, 137, 131, 62, 68, 116, 20, 50, 52, 82, 139, 47, 35, 101, 51, 43, 109, 62, 136, 97, 71, 48, 3]\n",
+      "[1, 3, 20, 35, 43, 47, 48, 50, 51, 52, 62, 62, 68, 71, 82, 97, 101, 109, 112, 116, 131, 136, 137, 137, 139]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "\n",
+    "def quicksort_r(arreglo):\n",
+    "    if len(arreglo)<2:\n",
+    "        return arreglo #Caso base\n",
+    "    else:\n",
+    "        pivot = arreglo[0]\n",
+    "        less = [i for i in arreglo[1:] if i<=pivot]\n",
+    "        greater = [i for i in arreglo[1:] if i>pivot]\n",
+    "        return quicksort_r(less) + [pivot] + quicksort_r(greater)\n",
+    "\n",
+    "    \n",
+    "arreglo = [randint(1,150) for i in range(25)]\n",
+    "\n",
+    "print(arreglo)\n",
+    "print(quicksort_r(arreglo))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ordenamiento por mezcla (mergesort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Tamaño de la lista a ordenar:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lista desordenada: \n",
+      "[190, 90, 94, 143, 3, 42, 192, 179, 135, 104, 44, 152, 50, 90, 74, 102, 146, 153, 162, 173]\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "Lista ordenada\n",
+      "[3, 42, 44, 50, 74, 90, 90, 94, 102, 104, 135, 143, 146, 152, 153, 162, 173, 179, 190, 192]\n"
      ]
     }
    ],
    "source": [
     "# Implementacion mergesorts\n",
-    "\n",
+    "# Complejidad nlog(n)\n",
     "\n",
     "def merge(izquierda, derecha, general):\n",
     "    #Auxiliares\n",
@@ -240,7 +448,7 @@
     "print(\"Lista desordenada: \")\n",
     "print(lista)\n",
     "\n",
-    "print(\"-\" * 20)\n",
+    "print(\"-\" * 50)\n",
     "\n",
     "print(\"\\nLista ordenada\")\n",
     "mergesort(lista)\n",
@@ -257,13 +465,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit (conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "a943dc03c518a544c66c9fe1d706c3e00fd4cf00b538b3fc6efd3c02fc5e4d46"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -275,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
