--- a/Pyhon Hk parte 1.ipynb
+++ b/Pyhon Hk parte 1.ipynb
@@ -13,10 +13,11 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Avanzado\n0 1 4 9 16 25 36 49 64 81\n"
+      "Avanzado\n",
+      "0 1 4 9 16 25 36 49 64 81\n"
      ]
     }
    ],
@@ -34,8 +35,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "False\n"
      ]
@@ -54,38 +55,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "12345678910\n"
+      "Numero: 10\n",
+      "1 2 3 4 5 6 7 8 9 10\n"
      ]
     }
    ],
    "source": [
     "n = int(input(\"Numero: \"))\n",
-    "print(*[ _ for _ in range(1,n+1)], sep=\"\")\n"
+    "print(*[ _ for _ in range(1,n+1)], sep=\" \")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "12345678910\n"
+      "10\n",
+      "1 2 3 4 5 6 7 8 9 10\n"
      ]
     }
    ],
    "source": [
     "#otra solucion sin crear una lista\n",
-    "print(*range(1, int(input())+1), sep=\"\")"
+    "print(*range(1, int(input())+1), sep=\" \")"
    ]
   },
   {
@@ -94,8 +97,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Weird\n"
      ]
@@ -116,8 +119,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "[[0, 0, 0], [0, 1, 1], [1, 0, 1], [1, 1, 0], [1, 1, 1]]\n"
      ]
@@ -136,10 +139,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[18, 32, 12, 5, 15, 17, 41, 43, 15, 23]\n[5, 12, 15, 17, 18, 23, 32, 41, 43]\n43\n41\n"
+      "[18, 32, 12, 5, 15, 17, 41, 43, 15, 23]\n",
+      "[5, 12, 15, 17, 18, 23, 32, 41, 43]\n",
+      "43\n",
+      "41\n"
      ]
     }
    ],
@@ -183,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
