--- a/Hk parte A1.ipynb
+++ b/Hk parte A1.ipynb
@@ -11,7 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contenido de notebook\n",
     "*__Este notebook contine soluciones ingeniosas a retos sobre:__*\n",
     "* Introduccion\n",
     "* Tipo de datos basicos\n",
@@ -22,7 +21,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aplicacion de if - else\n",
     "**Aplicacion if - else**\n",
     "ask\n",
     "Given an integer, , perform the following conditional actions:\n",
@@ -65,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operadores aritmeticos\n",
+    "**Operadores aritmeticos**\n",
     "\n",
     "The provided code stub reads two integers and . Add code to print three lines where:\n",
     "\n",
@@ -106,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loops\n",
+    "**Loops**\n",
     "\n",
     "The provided code stub reads and integer, n, For all non-negative integers $i<n$ print $i^2$"
    ]
@@ -136,8 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Determinar si el año es biciesto\n",
-    "**El año es biciesto sí**\n",
+    "**El año es biciesto**\n",
     "\n",
     "Se utilizan tres condiciones para identificar los años \n",
     "bisiestos:\n",
@@ -184,9 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imprimiendo valores\n",
-    "**Funcion de impresion** \\\n",
-    "**Unpack of values**\n",
+    "**Funcion de impresion**\n",
     "\n",
     "The included code stub will read an integer, $n$, from STDIN.\n",
     "\n",
@@ -238,7 +233,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compresion de listas\n",
     "**Compresion de listas**\n",
     "\n",
     "Se dan tres enteros $x,y,z$ que representan las dimensiones de un cuboide junto con un entero $n$. Imprime una lista de todas las coordenadas posibles dadas por $i,j,k$ en una cuadrícula 3D donde la suma de $i+j+k$ no es igual a $n$. \n",
@@ -370,7 +364,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Metodos comunes de las listas\n",
     "**Aplicando metodos mas comunes de las listas**\n",
     "\n",
     "Considere una lista (lista = []). Puede realizar los siguientes comandos:\n",
@@ -432,8 +425,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuplas y creacion de una funcion hash\n",
-    "\n",
     "**Tuplas y creacion de funcion hash**\n",
     "\n",
     "_Procedimiento_\n",
@@ -450,9 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -476,7 +465,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Listas anidadas\n",
     "**Listas anidadas**\\\n",
     "Dados los nombres y las calificaciones de cada alumno de una clase de  $N$ estudiantes, almacénelos en una lista anidada e imprima el nombre de cualquier alumno que tenga la segunda calificación más baja.\n",
     "\n",
@@ -486,50 +474,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solucion 1\n",
+    "\n",
+    "marksheet = [[input(\"nombre: \"), float(input(\"Score: \"))] for _ in range(input(\"Alumnos: \"))]\n",
+    "for _ in range(0, input(\"Numero de alumnos: \")):\n",
+    "    marksheet.append(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alumnos: 4\n",
-      "Nombre: mike\n",
-      "Score: 150\n",
-      "Nombre: fernand\n",
-      "Score: 130\n",
-      "Nombre: isa\n",
-      "Score: 202\n",
+      "4\n",
+      "Nombre: mari}\n",
+      "Puntaje: 150\n",
       "Nombre: jorge\n",
-      "Score: 110\n",
-      "fernand "
+      "Puntaje: 170\n",
+      "Nombre: mike\n",
+      "Puntaje: 175\n",
+      "Nombre: isa\n",
+      "Puntaje: 200\n",
+      "[['isa', 200.0], ['jorge', 170.0], ['mari}', 150.0], ['mike', 175.0]]\n",
+      "mari}\n",
+      "150.0\n",
+      "jorge\n",
+      "170.0\n",
+      "mike\n",
+      "175.0\n",
+      "isa\n",
+      "200.0\n"
      ]
     }
    ],
    "source": [
-    "# Solucion sencilla\n",
-    "\n",
-    "database = []\n",
-    "name_second_lowest=[]\n",
-    "scores = set() #no deben de repetirse\n",
-    "\n",
-    "for _ in range(int(input(\"Alumnos: \"))):\n",
+    "students = []\n",
+    "stu = []\n",
+    "for _ in range(int(input())):\n",
     "    name = input(\"Nombre: \")\n",
-    "    score = float(input(\"Score: \"))\n",
-    "    database.append([name,score])\n",
-    "    scores.add(score)\n",
-    "    \n",
-    "second_lowest = sorted(scores)[1] # El segundo menor\n",
+    "    score = float(input(\"Puntaje: \"))\n",
+    "    students.append([name, score])\n",
     "\n",
-    "# iterando sobre la base de datos\n",
-    "for name, score in database:\n",
-    "    if score == second_lowest:\n",
-    "        name_second_lowest.append(name)\n",
-    "    \n",
+    "print(sorted(students))\n",
     "\n",
-    "for name in sorted(name_second_lowest):\n",
-    "    print(name, end=\" \")\n"
+    "for i in students:\n",
+    "    for j in i:\n",
+    "        print(j)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
