Establecimiento de nuevos nombres

--- a/Pyhon Hk parte 1.ipynb
+++ b/Pyhon Hk parte 1.ipynb
@@ -536,7 +536,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Solucion avanzada\n",
+    "n=int(input())\n",
+    "marksheet = [[input(), float(input())] for _ in range(n)]\n",
+    "\n",
+    "second_lowest = sorted(list(set([marks])))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
