Nuevos ejercicios agregados

--- a/Python Hk A1.ipynb
+++ b/Python Hk A1.ipynb
@@ -533,17 +533,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "maria\n",
+      "12\n",
+      "jose\n",
+      "100\n",
+      "mario\n",
+      "1\n",
+      "miguel\n",
+      "150\n",
+      "maria\n"
+     ]
+    }
+   ],
    "source": [
     "# Solucion avanzada\n",
     "n=int(input())\n",
     "marksheet = [[input(), float(input())] for _ in range(n)]\n",
     "\n",
-    "second_lowest = sorted(list(set([marks])))\n",
-    "\n"
+    "second_lowest = sorted(list(set([marks for name, marks in marksheet])))[1]\n",
+    "print(\"\\n\\n\".join([a for a,b in sorted(marksheet) if b==second_lowest]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
