Se inician los proyectos de free code camp

--- a/Python Hk A2.ipynb
+++ b/Python Hk A2.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "sonic-bachelor",
    "metadata": {},
    "outputs": [
@@ -298,9 +298,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computadora\n",
-      "4 o\n",
-      "compoutadora\n"
+      "Hola que tal como estas\n",
+      "10 m\n",
+      "Hola que tml como estas\n"
      ]
     }
    ],
@@ -315,9 +315,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9aef5eb",
+   "metadata": {},
+   "source": [
+    "## Buscando una string\n",
+    "El usuario ingresara una cadena y una subcadena, se tiene que imprimir el numero de veces en que la subcadena se encuentra en la cadena principal.\n",
+    "El recorrido de la cadena es de izquierda a derecha.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a1d16c18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CON SOLAPAMIENTO\n",
+      "[1, 3]\n",
+      "[3, 4]\n",
+      "[3, 4]\n",
+      "\n",
+      "\n",
+      "SIN SOLAPAMIENTO USO DE METODO count\n",
+      "[1, 3]\n",
+      "[2, 4]\n",
+      "[3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def search_substring(cadena, subcadena):\n",
+    "    posiciones =[]\n",
+    "    posicion =0\n",
+    "    \n",
+    "    while posicion != -1:\n",
+    "        posicion  = cadena.find(subcadena, posicion)\n",
+    "        if posicion != -1:\n",
+    "            posiciones.append(posicion)\n",
+    "            posicion += 1\n",
+    "    return len(posiciones)\n",
+    "    \n",
+    "\n",
+    "test ={\n",
+    "    \"wrd1\":\"mi mama me mima\",\n",
+    "    \"wrd2\":\"mama que amamanta\",\n",
+    "    \"wrd3\":\"mi mama ama que la amamos\"\n",
+    "}\n",
+    "\n",
+    "subcadena =[\"ama\", \"ma\"]\n",
+    "\n",
+    "#CON SOLAPAMIENTO\n",
+    "print(\"CON SOLAPAMIENTO\")\n",
+    "for clave  in test:\n",
+    "    apariciones = [search_substring(test[clave], sub) for sub in subcadena]\n",
+    "    print(apariciones)\n",
+    "    \n",
+    "\n",
+    "#SIN SOLAPAMIENTO USANDO EL METODO COUNT\n",
+    "print(\"\\n\\nSIN SOLAPAMIENTO USO DE METODO count\")\n",
+    "for clave  in test:\n",
+    "    apariciones = [test[clave].count(sub) for sub in subcadena]\n",
+    "    print(apariciones)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a071cd04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "3\n",
+      "4\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# USANDO COMPRESION DE LISTAS------\n",
+    "# BASADO EN:\n",
+    "\"\"\"\n",
+    "string, substring = (input().strip(), input().strip())\n",
+    "print(sum([ 1 for i in range(len(string)-len(substring)+1) \n",
+    "if string[i:i+len(substring)] == substring]))\n",
+    "\"\"\"\n",
+    "\n",
+    "test ={\n",
+    "    \"wrd1\":\"mi mama me mima\",\n",
+    "    \"wrd2\":\"mama que amamanta\",\n",
+    "    \"wrd3\":\"mi mama ama que la amamos\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "subcadena =[\"ama\", \"ma\"]\n",
+    "\n",
+    "\n",
+    "for clave in test:\n",
+    "    for sub in subcadena:\n",
+    "        cuenta = sum(\n",
+    "            [1 for i in range(len(test[clave])-len(sub)+1)\n",
+    "            if test[clave][i:i+len(sub)] == sub]\n",
+    "        )\n",
+    "        print(cuenta)\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amber-aging",
+   "id": "585883de",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -325,7 +445,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "timely-accordance",
+   "id": "65db2b66",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3737aefe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -355,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
