Primera linea correcta

--- a/A1_FreecodeC.ipynb
+++ b/A1_FreecodeC.ipynb
@@ -91,8 +91,9 @@
     "            return \"Error: Numbers must only contain digits\"\n",
     "        \n",
     "        #Longitud maxima del operador\n",
-    "        max_length()\n",
-    "            \n",
+    "        max_length.append(\n",
+    "            max(len(str(lst[i][0])),  )\n",
+    "        )\n",
     "    \n",
     "    \n",
     "    \n",
@@ -104,22 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e3c5d02f",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "hola\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
      ]
     }
    ],
    "source": [
-    "print(\"hola\")"
+    "lista1 = [x for x in range(10)]\n",
+    "lista2 = [x for x in range(20)]\n",
+    "\n",
+    "print(max(lista1, lista2))"
    ]
   },
   {
