--- a/A1_FreecodeC.ipynb
+++ b/A1_FreecodeC.ipynb
@@ -42,22 +42,10 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "[['32', '+', '698'], ['3801', '-', '2'], ['45', '+', '43'], ['123', '+', '49']]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-b4c572c37eac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[0mproblemas\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"32 + 698\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"3801 - 2\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"45 + 43\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"123 + 49\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m \u001b[0mformato_aritmetico\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproblemas\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-1-b4c572c37eac>\u001b[0m in \u001b[0;36mformato_aritmetico\u001b[1;34m(problemas, display)\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m         \u001b[1;31m#Longitud maxima del operador\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m         \u001b[0mmax_length\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+      "['32 + 698', '3801 - 2', '45 + 43', '123 + 49']\n   32      3801      45      123\n+ 698    -    2    + 43    +  49\n-----    ------    ----    -----\n  730      3799      88      172\n"
      ]
     }
    ],
@@ -71,56 +59,86 @@
     "    # Construccion lista de operaciones\n",
     "    for i in range(len(problemas)):\n",
     "        lst.append(problemas[i].split(\" \"))\n",
-    "    print(lst)\n",
-    "    \n",
+    "    # print(lst)\n",
+    "\n",
     "    # Condiciones\n",
     "    if len(lst) > 5:\n",
     "        \"\"\"Mas problemas de los permitidos\"\"\"\n",
     "        return \"Error: Too many problems.\"\n",
-    "    \n",
+    "\n",
     "    for i in range(len(lst)):\n",
-    "        if (len(lst[i])!=3):\n",
+    "        if (len(lst[i]) != 3):\n",
     "            return \"Error: Expression must only contain 2 operands and 1 operator.\"\n",
-    "        if lst[i][1]!='+' and lst[i][1]!='-':\n",
+    "        if lst[i][1] != '+' and lst[i][1] != '-':\n",
     "            return \"Error: Operator must be '+' or '-'.\"\n",
-    "        \n",
-    "        try: # Conversion de numeros a enteros\n",
-    "            lst[i][0]=int(lst[i][0])\n",
-    "            lst[i][2]=int(lst[i][2])\n",
+    "\n",
+    "        try:  # Conversion de numeros a enteros\n",
+    "            lst[i][0] = int(lst[i][0])\n",
+    "            lst[i][2] = int(lst[i][2])\n",
     "        except:\n",
     "            return \"Error: Numbers must only contain digits\"\n",
-    "        \n",
-    "        #Longitud maxima del operador\n",
-    "        max_length.append(\n",
-    "            max(len(str(lst[i][0])),  )\n",
-    "        )\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "problemas = [\"32 + 698\", \"3801 - 2\", \"45 + 43\", \"123 + 49\"]\n",
-    "formato_aritmetico(problemas)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
-     ]
-    }
-   ],
-   "source": [
-    "lista1 = [x for x in range(10)]\n",
-    "lista2 = [x for x in range(20)]\n",
     "\n",
-    "print(max(lista1, lista2))"
+    "        # Longitud maxima de la maxima expresion\n",
+    "        max_length.append(\n",
+    "            max(len(str(lst[i][0])), len(str(lst[i][2])))\n",
+    "        )\n",
+    "        required_length.append(int(max_length[i]) + 2)\n",
+    "\n",
+    "        if lst[i][0] > 9999 or lst[i][2] > 9999:\n",
+    "            return \"Error: Numbers cannot be more than four digits.\"\n",
+    "\n",
+    "        arranged_problems = \"\"\n",
+    "\n",
+    "    # Primera linea\n",
+    "    for i in range(len(lst)):\n",
+    "        space_required = required_length[i] - len(str(lst[i][0]))\n",
+    "        for _ in range(space_required):\n",
+    "            arranged_problems += \" \"\n",
+    "        arranged_problems += str(lst[i][0]) + \"    \"\n",
+    "    arranged_problems = arranged_problems.rstrip()\n",
+    "    arranged_problems += \"\\n\"\n",
+    "\n",
+    "    #print(arranged_problems)\n",
+    "    # Segunda linea\n",
+    "    for i in range(len(lst)):\n",
+    "        arranged_problems += lst[i][1]\n",
+    "        space_required = required_length[i] - len(str(lst[i][2])) - 1\n",
+    "        for _ in range(space_required):\n",
+    "            arranged_problems += \" \"\n",
+    "        arranged_problems += str(lst[i][2]) + \"    \"\n",
+    "\n",
+    "    arranged_problems = arranged_problems.rstrip() \n",
+    "    arranged_problems += \"\\n\"\n",
+    "    #print (arranged_problems)\n",
+    "    \n",
+    "    # Linea separadora\n",
+    "    for i in range(len(lst)):\n",
+    "        for _ in range(required_length[i]):\n",
+    "            arranged_problems += \"-\"\n",
+    "        arranged_problems += \"    \"\n",
+    "    arranged_problems = arranged_problems.rstrip()\n",
+    "    \n",
+    "    # Devolver solo las operaciones\n",
+    "    if (not display):\n",
+    "        return arranged_problems\n",
+    "    \n",
+    "    # Desplegar resultado si se requiere\n",
+    "    arranged_problems += \"\\n\"\n",
+    "    for i in range(len(lst)):\n",
+    "        if lst[i][1] == \"+\":\n",
+    "            temp_result = lst[i][0] + lst[i][2] \n",
+    "        else:\n",
+    "            temp_result = lst[i][0] - lst[i][2] \n",
+    "        space_required = required_length[i] - len(str(temp_result))\n",
+    "        for _ in range(space_required):\n",
+    "            arranged_problems +=\" \"\n",
+    "        arranged_problems += str(temp_result) + \"    \"\n",
+    "    arranged_problems = arranged_problems.rstrip()\n",
+    "    return arranged_problems\n",
+    "problemas = [\"32 + 698\", \"3801 - 2\", \"45 + 43\", \"123 + 49\"]\n",
+    "var=formato_aritmetico(problemas,display=True)\n",
+    "print(problemas)\n",
+    "print(var)"
    ]
   },
   {
