See agrega nueva forma de resolver ejercicio

--- a/A1_FreecodeC.ipynb
+++ b/A1_FreecodeC.ipynb
@@ -143,6 +143,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['500 + 698', '3801 - 3900', '70 + 490', '123 - 49']\n  500      3801       70      123\n+ 698    - 3900    + 490    -  49\n-----    ------    -----    -----\n 1198       -99      560       74\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import re\n",
+    "# Segunda solucion usando expresiones regulares\n",
+    "\n",
+    "\n",
+    "def formato_aritmetico(problemas, display=False):\n",
+    "    if len(problemas) > 5:\n",
+    "        return \"Error: Too many problems.\"\n",
+    "\n",
+    "    # Definicion de lineas\n",
+    "    primera = \"\"\n",
+    "    segunda = \"\"\n",
+    "    separador = \"\"\n",
+    "    respuesta = \"\"\n",
+    "    cadena = \"\"\n",
+    "    for problema in problemas:\n",
+    "        # Condicion: Es un numero\n",
+    "        if(re.search(\"[^\\s0-9.+-]\", problema)):\n",
+    "            # Condicion: Pertimir solo suma y resta\n",
+    "            if(re.search(\"[/]\", problema) or re.search(\"[*]\", problema)):\n",
+    "                return \"Error: Operator must be '+' or '-'.\"\n",
+    "            return \"Error: Numbers must only contain digits.\"\n",
+    "        # Operadores\n",
+    "        primer_num = problema.split(\" \")[0]\n",
+    "        operador = problema.split(\" \")[1]\n",
+    "        segundo_num = problema.split(\" \")[2]\n",
+    "        # Condicion: Numeros menores a 5 digitos\n",
+    "        if(len(primer_num) >= 5 or len(segundo_num) >= 5):\n",
+    "            return \"Error: Numbers cannot be more than four digits.\"\n",
+    "\n",
+    "        res = \"\"\n",
+    "        if(operador == \"+\"):\n",
+    "            res = str(int(primer_num) + int(segundo_num))\n",
+    "        elif(operador == \"-\"):\n",
+    "            res = str(int(primer_num) - int(segundo_num))\n",
+    "\n",
+    "        length = max(len(primer_num), len(segundo_num)) + 2\n",
+    "        arg_prmro = str(primer_num).rjust(length)\n",
+    "        arg_sgndo = operador + str(segundo_num).rjust(length - 1)\n",
+    "        resultado = str(res).rjust(length)\n",
+    "        line = \"\"\n",
+    "        for _ in range(length):\n",
+    "            line += \"-\"\n",
+    "\n",
+    "        # Construccion con sus determinadas lineas\n",
+    "        # Fin del arreglo ?\n",
+    "        if problema != problemas[-1]:  # es el ultimo elemento\n",
+    "            primera += arg_prmro + \"    \"\n",
+    "            segunda += arg_sgndo + \"    \"\n",
+    "            separador += line + \"    \"\n",
+    "            respuesta += resultado + \"    \"\n",
+    "        else:\n",
+    "            primera += arg_prmro\n",
+    "            segunda += arg_sgndo\n",
+    "            separador += line\n",
+    "            respuesta += resultado\n",
+    "\n",
+    "    if display:\n",
+    "        cadena = primera + \"\\n\" + segunda + \"\\n\" + separador + \"\\n\" + respuesta\n",
+    "    else:\n",
+    "        cadena = primera + \"\\n\" + segunda + \"\\n\" + separador\n",
+    "    return cadena\n",
+    "\n",
+    "\n",
+    "\n",
+    "problemas = [\"500 + 698\", \"3801 - 3900\", \"70 + 490\", \"123 - 49\"]\n",
+    "var = formato_aritmetico(problemas, True)\n",
+    "print(problemas)\n",
+    "print(var)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
