Se empieza un nuevo problema

--- a/A1FreecodeC.ipynb
+++ b/A1FreecodeC.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "        if lst[i][0] > 9999 or lst[i][2] > 9999:\n",
     "            return \"Error: Numbers cannot be more than four digits.\"\n",
-    "\n",
+    "    \n",
     "        arranged_problems = \"\"\n",
     "\n",
     "    # Primera linea\n",
@@ -228,6 +228,50 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "source": [
+    "# Calculador de tiempo\n",
+    "\n",
+    "\n",
+    "Escriba una función llamada add_time que reciba dos parámetros obligatorios y un parámetro opcional:\n",
+    "\n",
+    "* una hora de inicio en el formato de reloj de 12 horas (que termina en AM o PM)\n",
+    "* un tiempo de duración que indique el número de horas y minutos\n",
+    "* (opcional) un día de inicio de la semana, que no distingue entre mayúsculas y minúsculas\n",
+    "\n",
+    "La función debe sumar la hora de duración a la hora de inicio y devolver el resultado.\n",
+    "\n",
+    "Si el resultado será el día siguiente, debe mostrar (next day) después de la hora. Si el resultado será más de un día después, debe mostrar (n días después) después de la hora, donde \"n\" es el número de días después.\n",
+    "\n",
+    "Si a la función se le da el parámetro opcional de día de la semana inicial, entonces la salida debe mostrar el día de la semana del resultado. El día de la semana en la salida debe aparecer después de la hora y antes del número de días posteriores.\n",
+    "\n",
+    "A continuación se muestran algunos ejemplos de diferentes casos que la función debe manejar. Preste mucha atención al espaciado y a la puntuación de los resultados.\n",
+    "\n",
+    "\n",
+    "```python\n",
+    "add_time(\"3:00 PM\", \"3:10\")\n",
+    "# Returns: 6:10 PM\n",
+    " \n",
+    "add_time(\"11:30 AM\", \"2:32\", \"Monday\")\n",
+    "# Returns: 2:02 PM, Monday\n",
+    " \n",
+    "add_time(\"11:43 AM\", \"00:20\")\n",
+    "# Returns: 12:03 PM\n",
+    " \n",
+    "add_time(\"10:10 PM\", \"3:30\")\n",
+    "# Returns: 1:40 AM (next day)\n",
+    " \n",
+    "add_time(\"11:43 PM\", \"24:20\", \"tueSday\")\n",
+    "# Returns: 12:03 AM, Thursday (2 days later)\n",
+    " \n",
+    "add_time(\"6:30 PM\", \"205:12\")\n",
+    "# Returns: 7:42 AM (9 days later)\n",
+    "```\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
