Errores corregidos, listo para push

--- a/A1FreecodeC.ipynb
+++ b/A1FreecodeC.ipynb
@@ -275,6 +275,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "numero de dias: 8\n7:42 AM (8 days later)\n\nnumero de dias: 0\n2:02 PM, Monday\n\nnumero de dias: 2\n12:03 AM, Thursday (2 days later)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_time(start, duration, day_of_week=False):\n",
+    "    day_of_week_index = {\n",
+    "        \"monday\": 0,\n",
+    "        \"tuesday\": 1,\n",
+    "        \"wednesday\": 2,\n",
+    "        \"thursday\": 3,\n",
+    "        \"friday\": 4,\n",
+    "        \"saturday\": 5,\n",
+    "        \"sunday\": 6,\n",
+    "    }\n",
+    "    day_of_week_array = [\n",
+    "        \"Monday\", \"Tuesday\",\n",
+    "        \"Wednesday\", \"Thursday\",\n",
+    "        \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "\n",
+    "    # DURACION\n",
+    "    # Definicion\n",
+    "    duration_tuple = duration.partition(\":\")\n",
+    "    # asignacion\n",
+    "    duration_hours = int(duration_tuple[0])\n",
+    "    duration_minutes = int(duration_tuple[2])\n",
+    "\n",
+    "    # TIEMPO INICIAL\n",
+    "    # definicion\n",
+    "    start_tuple = start.partition(\":\")\n",
+    "    start_2do_arg = start_tuple[2].partition(\" \")\n",
+    "    # asignacion\n",
+    "    start_hours = int(start_tuple[0])\n",
+    "    start_minutes = int(start_2do_arg[0])\n",
+    "\n",
+    "    # PERIODO DEL DIA\n",
+    "    period_day = start_2do_arg[2]\n",
+    "    set_period = {\"AM\": \"PM\", \"PM\": \"AM\"}\n",
+    "\n",
+    "    # CANTIDAD DE DIAS TRANSCURRIDOS\n",
+    "    amount_days = duration_hours // 24\n",
+    "\n",
+    "    # Minutos establecidos\n",
+    "    minutes_assigned = start_minutes + duration_minutes\n",
+    "    # Asignando horas y minutos\n",
+    "    if(minutes_assigned >= 60):\n",
+    "        start_hours += 1\n",
+    "        minutes_assigned = minutes_assigned % 60\n",
+    "    iteration_ampmCount = (start_hours + duration_hours) // 12\n",
+    "    hours_assignated = (start_hours + duration_hours) % 12\n",
+    "\n",
+    "    # APLICANDO FORMATO\n",
+    "    minutes_assigned = minutes_assigned if minutes_assigned > 9 else \"0\" + \\\n",
+    "        str(minutes_assigned)\n",
+    "    hours_assignated = hours_assignated = 12 if hours_assignated == 0 else hours_assignated\n",
+    "    if(period_day == \"PM\" and start_hours + (duration_hours % 12) >= 12):\n",
+    "        amount_days += 1\n",
+    "    print(\"numero de dias:\", amount_days)\n",
+    "\n",
+    "    # ESTABLECIENDO HORARIO\n",
+    "    period_day = set_period[period_day] if iteration_ampmCount % 2 == 1 else period_day\n",
+    "    # ESTABLECIENDO DIA\n",
+    "    if (day_of_week):\n",
+    "        day_of_week = day_of_week.lower()\n",
+    "        index = int((day_of_week_index[day_of_week]) + amount_days) % 7\n",
+    "        newday = day_of_week_array[index]\n",
+    "\n",
+    "    # FORMATO DE REGRESO\n",
+    "    result_time = str(hours_assignated) + \":\" + \\\n",
+    "        str(minutes_assigned) + \" \"+period_day\n",
+    "    days_later = \"(next day)\" if amount_days == 1 else \"(\" + \\\n",
+    "        str(amount_days)+\" days later)\"\n",
+    "\n",
+    "    if (amount_days >= 1 and day_of_week == False):\n",
+    "        result_time += \" \"+days_later\n",
+    "    if (amount_days >= 1 and day_of_week):\n",
+    "        result_time += \", \"+newday+\" \"+days_later\n",
+    "    if (amount_days == 0 and day_of_week):\n",
+    "        result_time += \", \"+newday\n",
+    "    return result_time\n",
+    "\n",
+    "# Simulacion de main\n",
+    "print(add_time(\"6:30 PM\", \"205:12\"))\n",
+    "print()\n",
+    "print(add_time(\"11:30 AM\", \"2:32\", \"Monday\"))\n",
+    "print()\n",
+    "print(add_time(\"11:43 PM\", \"24:20\", \"tueSday\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
