Inicio de un nuevo proyecto Ploligonos

--- a/FCCampComputerScientific_A2.ipynb
+++ b/FCCampComputerScientific_A2.ipynb
@@ -250,6 +250,99 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Polygon area calculator\r\n",
+    "\r\n",
+    "### Asignación\r\n",
+    "\r\n",
+    "En este proyecto utilizarás la programación orientada a objetos para crear una clase Rectángulo y una clase Cuadrado. La clase Cuadrado debe ser una subclase de Rectángulo y heredar métodos y atributos.\r\n",
+    "\r\n",
+    "#### Clase Rectángulo\r\n",
+    "Cuando se crea un objeto Rectángulo, debe ser inicializado con los atributos `width` y `height`. La clase también debe contener los siguientes métodos:\r\n",
+    "* \"set_width\" (fijar la anchura)\r\n",
+    "* \"set_height\" (establecer la altura)\r\n",
+    "* Obtener área: Devuelve el área (`ancho * alto`)\r\n",
+    "* `get_perimeter`: Devuelve el perímetro (`2 * ancho + 2 * alto`)\r\n",
+    "* `get_diagonal`: Devuelve la diagonal (`(ancho ** 2 + alto ** 2) ** .5`)\r\n",
+    "* `get_picture`: Devuelve una cadena que representa la forma mediante líneas de \"\\*\". El número de líneas debe ser igual a la altura y el número de \"\\*\" en cada línea debe ser igual a la anchura. Debe haber una nueva línea (`\\n`) al final de cada línea. Si la anchura o la altura es superior a 50, debería devolver la cadena \"Demasiado grande para la imagen\".\r\n",
+    "* `get_amount_inside`: Toma otra forma (cuadrado o rectángulo) como argumento. Devuelve el número de veces que la forma pasada podría caber dentro de la forma (sin rotaciones). Por ejemplo, un rectángulo con una anchura de 4 y una altura de 8 podría caber en dos cuadrados con lados de 4.\r\n",
+    "\r\n",
+    "Además, si una instancia de un Rectángulo se representa como una cadena, debería tener el siguiente aspecto `Rectángulo(width=5, height=10)`\r\n",
+    "\r\n",
+    "#### Clase Cuadrado\r\n",
+    "La clase Square debe ser una subclase de Rectangle. Cuando se crea un objeto Square, se le pasa una única longitud de lado. El método `__init__` debe almacenar la longitud del lado en los atributos `width` y `height` de la clase Rectangle.\r\n",
+    "\r\n",
+    "La clase Square debe ser capaz de acceder a los métodos de la clase Rectangle, pero también debe contener un método `set_side`. Si una instancia de un cuadrado se representa como una cadena, debe ser como: `Cuadrado(lado=9)`\r\n",
+    "\r\n",
+    "Además, el `set_width` y `set_height` métodos en la clase Square debe establecer tanto la anchura y la altura.\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Ejemplo de uso\r\n",
+    "```py\r\n",
+    "rect = shape_calculator.Rectangle(10, 5)\r\n",
+    "print(rect.get_area())\r\n",
+    "rect.set_height(3)\r\n",
+    "print(rect.get_perimeter())\r\n",
+    "print(rect)\r\n",
+    "print(rect.get_picture())\r\n",
+    "\r\n",
+    "sq = shape_calculator.Square(9)\r\n",
+    "print(sq.get_area())\r\n",
+    "sq.set_side(4)\r\n",
+    "print(sq.get_diagonal())\r\n",
+    "print(sq)\r\n",
+    "print(sq.get_picture())\r\n",
+    "\r\n",
+    "rect.set_height(8)\r\n",
+    "rect.set_width(16)\r\n",
+    "print(rect.get_amount_inside(sq))\r\n",
+    "```\r\n",
+    "That code should return:\r\n",
+    "```\r\n",
+    "50\r\n",
+    "26\r\n",
+    "Rectangle(width=10, height=3)\r\n",
+    "**********\r\n",
+    "**********\r\n",
+    "**********\r\n",
+    "\r\n",
+    "81\r\n",
+    "5.656854249492381\r\n",
+    "Square(side=4)\r\n",
+    "****\r\n",
+    "****\r\n",
+    "****\r\n",
+    "****\r\n",
+    "\r\n",
+    "8\r\n",
+    "```"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Clase"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# Metodo principal"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
